# S32KEVB_DEMO

./: .gitignore  .gitmodules  CMakeLists.txt  S32KEVB_DEMO.uvoptx  S32KEVB_DEMO.uvprojx
RTE/Device/S32K146UAxxxLQx/: S32K146_128_flash_AC6.sct  S32K146_128_ram_AC6.sct  startup_S32K146.s
RTE/_Target_1/: RTE_Components.h
RTE/_demo/: RTE_Components.h
src/: main.cpp
src/drivers/inc/: driver_pins.h  safe_var.h
src/drivers/src/: driver_pins.cpp  safe_var.cpp
